--- a/tax_project/.env
+++ b/tax_project/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://taxcalc_user:L0NvOElSsn6XJ9DIK8oo1fA4n9uHYrLd@dpg-cjhmrql1a6cs73eb1uqg-a.singapore-postgres.render.com/taxcalc
+DATABASE_URL=**Postgres link*
